--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   top: 0;
   left: 0;
   width: 100%; /* Ocupa todo el ancho */
-  background-color: white;
+  background-color: #f5f6f0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -326,4 +326,5 @@ footer {
   font-size: 18px;
   color: #000000;
   line-height: 1.5;
+
 }
