--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 //* FORZAR el fondo en toda la página */
-html, body {
+body {
   height: 100%;
   min-height: 100%;
   background: linear-gradient(135deg, #bebebe, #f5fffd) !important;
@@ -326,6 +326,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
