--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ body {
   padding: 0;
 }
 
-
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;              /* espacio entre enlaces */
+  padding-right: 30px;    /* espacio extra a la derecha */
+  padding-left: 30px;     /* opcional, también a la izquierda */
 
 
 
@@ -326,6 +331,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
