--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+
 //* FORZAR el fondo en toda la página */
-body {
+html, body {
   height: 100%;
   min-height: 100%;
   background: linear-gradient(135deg, #bebebe, #f5fffd) !important;
@@ -7,7 +8,10 @@ body {
   margin: 0;
   padding: 0;
 }
-  
+
+
+
+
 
 .navbar {
   position: fixed;
@@ -62,7 +66,7 @@ nav a:hover {
 
 /* 4. Encabezado */
 header {
-  background-color: transparent;
+  background-color: white;
   color: black;
   padding: 10px 10px;
   text-align: center; /* Encabezado centrado */
@@ -323,6 +327,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
