--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ html, body {
   padding: 0;
 }
 
-
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;              /* espacio entre enlaces */
+  padding-right: 30px;    /* espacio extra a la derecha */
+  padding-left: 30px;     /* opcional, también a la izquierda */
 
 
 
@@ -327,6 +332,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
