--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
   gap: 20px;              /* espacio entre enlaces */
   padding-right: 30px;    /* espacio extra a la derecha */
   padding-left: 30px;     /* opcional, también a la izquierda */
-
+}
 
 
 .navbar {
@@ -332,6 +332,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
