--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 //* FORZAR el fondo en toda la página */
-html, body {
+body {
   height: 100%;
   min-height: 100%;
   background: linear-gradient(135deg, #bebebe, #f5fffd) !important;
@@ -327,6 +327,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
