--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ nav {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
+  padding: 10;
 }
 
 nav a {
@@ -326,6 +327,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
