--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
-  padding: 30;
+  padding-right: 30px;
 }
 
 nav a {
@@ -327,6 +327,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
