--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   background: linear-gradient(135deg, #bebebe, #f5fffd) !important;
   background-attachment: fixed;
   margin: 0;
-  padding: 10;
+  padding-top: 10px;
 }
 
 
@@ -330,6 +330,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
