--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ footer {
 @media (max-width: 768px) {
   body {
     padding-top: 60px;
+      font-size: 14px;
   }
 
   .navbar {
@@ -224,6 +225,15 @@ footer {
 
   header, main, footer {
     padding: 20px 15px;
+  }
+  
+    font-size: 26px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 14px;
   }
 
   .productos h2 {
@@ -330,6 +340,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
