--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ footer {
 
 }
 .video-section {
-  text-align: left;
+  text-align: center;
   margin: 50px auto;
   padding: 20px;
   max-width: 800px;
@@ -330,6 +330,7 @@ footer {
   line-height: 1.5;
 
 }
+
 
 
 
