--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   height: 100%;
   min-height: 100%;
-    font-family: 'Roboto Slab', serif;
+  font-family: 'Roboto Slab', serif;
   background: linear-gradient(135deg, #bebebe, #f5fffd) !important;
   background-attachment: fixed;
   margin: 0;
@@ -71,13 +71,13 @@ nav a:hover {
 header {
   background-color: white;
   color: black;
-  padding: 10px 10px;
+  padding: 70px 10px;
   text-align: center; /* Encabezado centrado */
   box-shadow: 0 2px 5px rgba(0,0,0,0.05);
 }
 
 
-  footer {
+footer {
   background-color: transparent;
   padding: 20px;
   text-align: center; /* Pie de página centrado */
@@ -213,7 +213,7 @@ h1, h2, h3 {
 }
 
 .card {
-    background-color: light-gray;
+    background-color: white;
     padding: 140px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -350,6 +350,7 @@ h1, h2, h3 {
   line-height: 1.5;
 
 }
+
 
 
 
