--- a/style.css
+++ b/style.css
@@ -9,8 +9,14 @@ body {
   padding-top: 10px;
 }
 
-
-
+#inicio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 100px); /* ocupa toda la pantalla menos navbar */
+  padding: 20px;
+}
 
 
 .navbar {
@@ -342,6 +348,7 @@ h1, h2, h3 {
   line-height: 1.5;
 
 }
+
 
 
 
