--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - 100px); /* ocupa toda la pantalla menos navbar */
+  min-height: 60px 20px 40px; /* ocupa toda la pantalla menos navbar */
   padding: 20px;
 }
 
@@ -349,6 +349,7 @@ h1, h2, h3 {
   line-height: 1.5;
 
 }
+
 
 
 
